# ColonyProtocol

./: CLAUDE.md  Cargo.toml  README.md
colony_cli/: Cargo.toml
colony_cli/src/: main.rs
colony_core/: Cargo.toml
colony_core/src/: commands.rs  configs.rs  fleet.rs  game.rs  game_state.rs  lib.rs  player.rs  resources.rs  structure.rs
colony_core/src/commands/: build.rs  build_ship.rs  command.rs  error.rs  fleets.rs  map.rs  parser.rs  status.rs  upgrade.rs
colony_core/src/game/: building.rs  pending_action.rs  planet.rs  player.rs  state.rs  turn.rs
colony_core/src/game/building/: building.rs  building_config.rs  resource.rs
colony_core/src/systems/: command_system.rs
colony_protocol/: Cargo.toml
colony_protocol/src/: commands.rs  configs.rs  game.rs  game_configuration.rs  game_state.rs  main.rs  map.rs  pending_action.rs  planet.rs  planet_graph.rs  planet_name_generator.rs  player.rs  resources.rs  ship.rs  structure.rs  utils.rs
colony_protocol/src/commands/: build.rs  cancel.rs  command.rs  end_turn.rs  fleet.rs  help.rs  map.rs  parse.rs  parser.rs  planet.rs  ships.rs  status.rs
colony_protocol/src/configs/: planet_names.rs  player_names.rs  ship_config.rs  structure_config.rs
colony_protocol/src/planet_graph/: graph_generator.rs  name_generator.rs
data/: buildings.json  planet_names.json  player_names.json  ships.json  structure.json
docs/: flowchart.md  game_flow.mmd
